[package]
name = "paywallremover"
version = "0.1.0"
edition = "2021"
description = "Url updater bot for Telegram"
license = "BSD-3-Clause-Clear"
readme = "README.md"
repository = "https://github.com/matteof04/paywallremover"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "charset",
    "rustls-tls",
] }
scraper = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tap = "1"
teloxide = { version = "0.17", default-features = false, features = [
    "ctrlc_handler",
    "macros",
    "rustls",
] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
